# pyflink-poc

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
flink_with_python/: flink_kafka_consumer_datastream.py  flink_kafka_producer_datastream.py  flink_kinesis_consumer_datastream.py  flink_kinesis_consumer_datastream_s3.py  flink_kinesis_consumer_table.py  kafka_producer.py
