[tool.poetry]
name = "flink-with-python"
version = "0.1.0"
description = ""
authors = ["Sanni Heruwala"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
grpcio-tools = "^1.59.3"
grpcio = "^1.59.3"
loguru = "^0.7.2"
black = "^23.11.0"
asyncio = "^3.4.3"
apache-flink = "^1.18.0"
kafka-python = "^2.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
my_flink_job = "flink_with_python.flink_kinesis_consumer_datastream:main"